<resources>
    <string name="app_name">Github User App</string>
    <string name="search_label">Github User</string>
    <string name="activity_favorite">Favorite User</string>
    <string name="detail_label">Detail User</string>
    <string name="description_avatar">Avatar description</string>
    <string name="menu_language_settings">Language Settings</string>
    <string name="menu_favorite">Favorite User</string>
    <string name="search_hint">Username</string>
    <string name="txt_repository">Repository</string>
    <string name="txt_follower">Follower</string>
    <string name="txt_following">Following</string>
    <string name="tab_text_1">Follower</string>
    <string name="tab_text_2">Following</string>

    // Daily Reminder
    <string name="daily_reminder">Daily Reminder</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="setting">Setting</string>

    // Stack Widget
    <string name="appwidget_text">GITHUB USER APP</string>
    <string name="empty_text">NO DATA</string>
</resources>