<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/btnSetting"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_language_settings"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daily_reminder"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:backgroundTint="@android:color/holo_red_light"
                android:text="@string/off"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btnOn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/on"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>